remove events adapter for postgres - moved to kafka/lib, and removed eventsender - moved to kafka/lib
