# services/api-gateway/internal/controller/customer_controller/get_me.go
@@ -1,36 +1,31 @@
 package customercontroller
 
 import (
-	"log/slog"
 	"net/http"
 
 	"github.com/fedotovmax/httputils"
-	"github.com/fedotovmax/i18n"
-
 	"github.com/fedotovmax/microservices-shop-protos/gen/go/userspb"
 	"github.com/fedotovmax/microservices-shop/api-gateway/internal/keys"
 	"github.com/fedotovmax/microservices-shop/api-gateway/internal/utils"
 	"google.golang.org/grpc/metadata"
 )
 
-// @Summary      Update user profile
-// @Description  Update user profile
-// @Router       /customers/users/profile [patch]
+// @Summary      Get user profile
+// @Description  Get user base profile
+// @Router       /customers/users/profile [get]
 // @Tags         customers
 // @Accept       json
 // @Produce      json
 // @Security BearerAuth
-// @Param dto body userspb.UpdateUserProfileData true "Update user profile with body dto"
 // @Param X-Request-Locale header string false "Locale"
-// @Success      200  {object}  httputils.ErrorResponse
+// @Success      200  {object}  userspb.User
 // @Failure      401  {object}  httputils.ErrorResponse
 // @Failure      400  {object}  errdetails.BadRequest
+// @Failure      404  {object}  httputils.ErrorResponse
 // @Failure      500  {object}  httputils.ErrorResponse
-func (c *controller) updateUserProfile(w http.ResponseWriter, r *http.Request) {
+func (c *controller) getMe(w http.ResponseWriter, r *http.Request) {
 
-	const op = "controller.customer.updateUserProfile"
-
-	l := c.log.With(slog.String("op", op))
+	const op = "controller.customer.getMe"
 
 	locale := r.Header.Get(keys.HeaderLocale)
 
@@ -45,39 +40,21 @@ func (c *controller) updateUserProfile(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	var updateUserProfileData userspb.UpdateUserProfileData
-
-	err = httputils.DecodeJSON(r.Body, &updateUserProfileData)
-
-	if err != nil {
-
-		msg, err := i18n.Local.Get(locale, keys.ValidationInvalidBody)
-
-		if err != nil {
-			l.Error(err.Error())
-		}
-
-		httputils.WriteJSON(w, http.StatusBadRequest, httputils.NewError(msg))
-		return
-	}
-
 	md := metadata.Pairs(
 		keys.MetadataLocaleKey, locale,
 	)
 
 	ctx := metadata.NewOutgoingContext(r.Context(), md)
 
-	updateUserProfileReq := &userspb.UpdateUserProfileRequest{
-		UserId: user.UID,
-		Data:   &updateUserProfileData,
-	}
-
-	_, err = c.users.UpdateUserProfile(ctx, updateUserProfileReq)
+	response, err := c.users.FindUserByID(ctx, &userspb.FindUserByIDRequest{
+		Id: user.UID,
+	})
 
 	if err != nil {
 		httputils.HandleErrorFromGrpc(w, err)
 		return
 	}
 
-	httputils.WriteJSON(w, http.StatusOK, httputils.OK())
+	httputils.WriteJSON(w, http.StatusOK, response)
+
 }
